mi: Only UpdateSpriteForScreen if we actually changed the screen. (Bug #12650)

X.Org Bug 12650 <http://bugs.freedesktop.org/show_bug.cgi?id=12650>